# growth-bench

./: .gitignore  .gitmodules  README.md  load_yeast9_matlab_model.py  run_benchmark.py  run_benchmark_etfl.py
bench/: pyproject.toml  requirements-base.txt  requirements.txt
bench/models/: __init__.py  random.py  strategy.py  woytock2018.py  yeast9.py  yeast9_strategy.py
bench/models/ETFL/: cefl.py  requirements-etfl.txt
bench/models/decrem/: README.md  decrem_gateway.py  decrem_strategy.py  run_decrem.ipynb  run_decrem.py
bench/models/lasso/: lasso_strategy.py  optimiser.py  requirements-lasso.txt  run_hybrid_group_ipf_lasso.ipynb
bench/models/moma/: data_splitters.py  model.py  model_constructors.py  moma.py  moma_data_gateway.py  moma_strategy.py  normalisers.py  optimiser_factory.py  preprocessing.py  requirements-moma.txt  run_mann_pipeline.py  run_moma.ipynb  run_triple_view_moma.ipynb  train.py  training.py  view.py  yeast_gene_names.tsv
bench/models/moma/culley_moma/: culley_main.py  culley_preprocessing.py
bench/models/moma/entities/: fluxomics.py  growth.py  omics.py  proteomics.py  transcriptomics.py
bench/models/moma/filter_utils/: interesection_filter.py  omics_filter_utils.py
bench/models/moma/gateways/: fluxomics_gateway.py  gateways.py  gateways_to_remove.py  growth_gateway.py  proteomics_gateway.py  transcriptomics_gateway.py
bench/models/moma/preprocessing_utils/: filters.py  integrators.py  (+2 more)
bench/models/simplefba/: __init__.py  requirements-fba.txt
bench/tasks/: __init__.py  context.py  task1.py  task2.py  task3.py  task4.py
(+65 files in other folders)
